# smash

./: .authors.json  .clang-format  .cmake-format.py  .gitignore  .mailmap  .metadata.json  .travis.yml  .zenodo.json  AUTHORS  AUTHORS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  DEBUG  INSTALL  INSTALL.md  LICENSE  LICENSE.md  README  README.md  pull_trigger
.github/workflow/: pull_check.test
.github/workflows/: github-actions-on-github-servers.yml  github-actions-self-hosted-for-dev-repo.yml  pull_check.yml  tests.yaml  tests.yml
Implementation Concept/: Changes to Smash__Experiment  New Class Smash__ScatterActionPhoton.cc  New Class Smash__ScatterActionPhoton.h  New Class Smash__ScatterActionsFinderPhoton.cc  New Class Smash__ScatterActionsFinderPhoton.h  Remaining Questions
cmake/: AddCompilerFlag.cmake  CheckCCompilerFlag.cmake  CheckCXXCompilerFlag.cmake  CheckMicCCompilerFlag.cmake  CheckMicCXXCompilerFlag.cmake  FindEigen3.cmake  FindGSL.cmake  FindHepMC.cmake  FindPythia.cmake  FindROOT.cmake  FindRivet.cmake  FindSMASH.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  Utilities.cmake  copy_file_contents_to_string.cmake
containers/: Dockerfile  README.md  README_Docker.md  README_Singularity.md  README_from_Docker_to_Singularity.md  smash_v2_0__ubuntu_20_04.def  smash_v2_1__ubuntu_20_04.def
containers/docker_max/: Dockerfile
containers/docker_mini/: Dockerfile
doc/: CMakeLists.txt  DoxyUser.in  Doxyfile.in  DoxygenLayout.xml  UserInputFiles.cmake  UserInputFiles.txt  UserLayout.xml  extra_style.css  fix_doc_changelog_headings.py  footer_doc.html  generateuserdocs.sh  get_bibtex.bash  get_bibtex.sh  header_doc.html  index.dox  inspire.bib  mainpage.dox  non_inspire.bib  prepare_userguide_source.bash  set_smash_version.sh  smash.bib  userguide.dox
examples/reading_HepMC3_treeroot_output/: README.md  simple_treeroot_read_standalone.cc
examples/using_SMASH_as_library/: CMakeLists.txt  README.md  dynamic_IC_manager.cc  example.cc  example_rate_equations.cc  example_smash_wrapper.cc  run_dyIC.bash  run_examples.bash  run_examples_for_testing.bash
examples/using_SMASH_as_library/include/: example.h
input/: config.yaml  config_box.yaml  config_box_new.yaml  config_collection.yaml  config_list.yaml  config_sphere.yaml  decaymodes.txt  decaymodes_rho.txt  decaymodes_rho0.txt  decaymodes_rho_stable.txt  particles.txt  particles_rho.txt  particles_rho0.txt  particles_rho_stable.txt
input/box/: config.yaml  decaymodes.txt  particles.txt
input/correlated/: config.yaml
input/correlated_nucleus/: config.yaml
input/custom_nucleus/: config.yaml
input/deformed_nucleus/: config.yaml
input/dileptons/: config.yaml  decaymodes.txt
input/light_nuclei/: decaymodes.txt  particles.txt
input/list/: box_list0  config.yaml  config_box.yaml  example_list0
src/: .gitignore  .particles.txt.kate-swp  Agnieszka_chemical_potential.cc  Agnieszka_distribution.cc  Agnieszka_sampling.cc  CMakeLists.txt  action.cc  action_globals.cc  adaptiverejectionsampler.cc  alphaclusterednucleus.cc  binaryoutput.cc  binaryoutput_collisions.cc  binaryoutput_particles.cc  binaryoutputcollisions.cc  binaryoutputparticles.cc  boundaryconditions.cc  box.cc  boxmodus.cc  boxmodus.cc.orig  boxmodus.cc.rej  bremsstrahlungaction.cc  chemical_potential.cc  chemicalpotential.cc  clebschgordan.cc  clebschgordan_lookup.cc  collider.cc  collidermodus.cc  collisions.cc  config.yaml  config_box.txt  config_general.txt  config_general.yaml  config_laboratory.txt  config_sphere.txt  configuration.cc  correlatednucleus.cc  cross-sections.cc  cross-sections.txt  crosssections.cc  crosssectionsphoton.cc  (+120 more)
src/benchmarks/: README.md  benchmark.sh
src/benchmarks/configs/box/: config.yaml
src/benchmarks/configs/collider/: config.yaml
src/benchmarks/configs/dileptons/: config.yaml
src/benchmarks/configs/sphere/: config.yaml
src/include/: .tabulationnd.h.swo  Angles.h  BoundaryConditions.h  Box.h  BoxModus.h  ClebschGordan.h  Collider.h  ColliderModus.h  CollisionData.h  Config.h.in  CrossSections.h  DecayModes.h  Experiment.h  ExperimentParameters.h  FourVector.h  Laboratory.h  Modus.h  ModusDefault.h  Parameters.h  ParticleData.h  ParticleType.h  Particles.h  ProcessBranch.h  Sphere.h  SphereModus.h  action.h  action_globals.h  actionfinderfactory.h  actions.h  adaptiveparameters.h  adaptiverejectionsampler.h  algorithms.h  angles.h  average.h  bessel_sampler.h  binaryoutput.h  binaryoutput_collisions.h  binaryoutput_particles.h  binaryoutputcollisions.h  binaryoutputparticles.h  (+123 more)
src/include/smash/: Agnieszka_chemical_potential.h  Agnieszka_distribution.h  Agnieszka_sampling.h  action.h  action_globals.h  actionfinderfactory.h  actions.h  algorithms.h  alphaclusterednucleus.h  angles.h  average.h  bessel_sampler.h  binaryoutput.h  binaryoutputcollisions.h  binaryoutputparticles.h  boxmodus.h  bremsstrahlungaction.h  chemical_potential.h  chemicalpotential.h  chrono.h  clebschgordan.h  clebschgordan_lookup.h  clock.h  collidermodus.h  config.h.in  configuration.h  constants.h  correlatednucleus.h  crosssections.h  crosssectionsbrems.h  crosssectionsphoton.h  customnucleus.h  cxx14compat.h  cxx17compat.h  decayaction.h  decayactiondilepton.h  decayactionsfinder.h  decayactionsfinderdilepton.h  decaymodes.h  decaytype.h  (+93 more)
src/tests/: .random.cc.swp  CMakeLists.txt  action.cc  actions.cc  adaptiverejectionsampler.cc  alphaclusterednucleus.cc  angles.cc  angles_distribution.cc  angles_zero.cc  assert.h  average.cc  binaryoutput.cc  boxmodus.cc  clebschgordan.cc  clebschgordan_lookup.cc  clock.cc  config.yaml  configuration.cc  decayaction.cc  decayaction_mock.cc  decaymodes.cc  decaymodes_incl_dileptons.txt  decaytree.cc  deformednucleus.cc  density.cc  dileptons.cc  distributions.cc  dynamic_fluidization.cc  enable_float_traps.cc  energymomentumtensor.cc  experiment.cc  filelock.cc  formfactors.cc  fourvector.cc  fpe.cc  grandcan_thermalizer.cc  grid.cc  hadgas_eos.cc  hadgas_eos2.cc  histogram.h  (+70 more)
src/tests/functional/: ic_for_hybrid.py
(+10 files in other folders)
